# InlineBench

./: CMakeLists.txt  README.md  format_check.sh
.github/workflows/: clang-format.yml  clang.yml  gcc.yml
examples/: CMakeLists.txt  example0.cpp  example1.cpp  example2.cpp  example3.cpp  example4.cpp  example_scope.cpp
include/inlinebench/: benchmark.h  inlinebench.h
