add_executable(Example0 example0.cpp)
target_link_libraries(Example0 PUBLIC InlineBench)

add_executable(Example1 example1.cpp)
target_link_libraries(Example1 PUBLIC InlineBench)

add_executable(Example2 example2.cpp)
target_link_libraries(Example2 PUBLIC InlineBench)

add_executable(Example3 example3.cpp)
target_link_libraries(Example3 PUBLIC InlineBench)

add_executable(Example4 example4.cpp)
target_link_libraries(Example4 PUBLIC InlineBench)